compreview-apps/solutions/compreview-apps/beeper-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beeper-api
  namespace: workshop-support
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: beeper-api
  template:
    metadata:
      labels:
        app: beeper-api
    spec:
      containers:
        - name: beeper-api
          image: registry.ocp4.example.com:8443/redhattraining/do280-beeper-api:1.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1536Mi
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /readyz
              scheme: HTTPS
          livenessProbe:
            httpGet:
              port: 8080
              path: /livez
              scheme: HTTPS
          startupProbe:
            httpGet:
              path: /readyz
              port: 8080
              scheme: HTTPS
            failureThreshold: 30
            periodSeconds: 3
          volumeMounts:
            - name: beeper-api-tls
              mountPath: /etc/pki/beeper-api/
      volumes:
        - name: beeper-api-tls
          secret:
            defaultMode: 420
            secretName: beeper-api-tls
